examples/test/testpolicy10763.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10763
  namespace: namespace415
spec:
  podSelector:
    matchLabels:
      key39: value6
      key23: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value0
      podSelector:
        matchLabels:
          key0: value39
          key31: value33
          key23: value22
